; ModuleID = '/home/carl/AnghaBench/stb/tests/extr_stb.c_dumpfunc.c'
source_filename = "/home/carl/AnghaBench/stb/tests/extr_stb.c_dumpfunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [21 x i8] c"%p (%6d)  -- %3d:%s\0A\00", align 1
@alloc_size = common dso_local global i32 0, align 4
@alloc_num = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dumpfunc(i8* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i8*, i8** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* %8, align 4
  %12 = load i8*, i8** %7, align 8
  %13 = call i32 @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8* %9, i32 %10, i32 %11, i8* %12)
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* @alloc_size, align 4
  %16 = add nsw i32 %15, %14
  store i32 %16, i32* @alloc_size, align 4
  %17 = load i32, i32* @alloc_num, align 4
  %18 = add nsw i32 %17, 1
  store i32 %18, i32* @alloc_num, align 4
  ret void
}

declare dso_local i32 @printf(i8*, i8*, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
